Fix accidental margin spillover.

--- a/src/pages/Event/EventResult/EventResult.module.scss
+++ b/src/pages/Event/EventResult/EventResult.module.scss
@@ -19,7 +19,7 @@
             padding: dimensions.padding('md');
             z-index: 2;
 
-            & .title {
+            & .eventTitle {
                 margin-top: dimensions.margin('xxl');
             }
 
